--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div class="bottom-content">
                 <div class="bottom-left">
                     <h1 data-aos="fade-right" data-aos-duration="1000" data-aos-delay="900">Your feet <br>deserve <br> the best</h1>
-                    <p data-aos="fade-left" data-aos-duration="1000" data-aos-delay="1100">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quis optio porro illo laboriosam debitis blanditiis a repellat nemo cumque maiores facere iusto ab mollitia, voluptatem minus nesciunt iste facilis modi?</p>
+                    <p data-aos="fade-left" data-aos-duration="1000" data-aos-delay="1100">Good purchase at low price</p>
                     <div class="btn-sec">
                         <button data-aos="fade-right" data-aos-duration="1000" data-aos-delay="1300">Shop Now</button>
                         <button data-aos="fade-left" data-aos-duration="1000" data-aos-delay="1300">Category</button>
